--- a/src/app/heroes/heroes.component.css
+++ b/src/app/heroes/heroes.component.css
@@ -12,7 +12,7 @@
 .heroes li {
     cursor: pointer;
     position: relative;
-    left: 0;
+    /* left: 0; */
     background-color: #EEE;
     margin: .5em;
     padding: .3em 0;
